[gd_scene load_steps=6 format=1]

[ext_resource path="res://InGameUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/font_classic.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/font_bold_italic.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Fonts/font_italic.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/font_bold.fnt" type="BitmapFont" id=5]

[node name="InGameUI" type="Control"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="InteractionButton" type="MenuButton" parent="."]

visibility/visible = false
visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 920.0
margin/top = 570.0
margin/right = 1009.0
margin/bottom = 590.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "E to interact"
flat = false
items = [  ]

[node name="DialogPanel" type="Panel" parent="."]

visibility/visible = false
visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 420.0
margin/right = 780.0
margin/bottom = 600.0

[node name="BodyTextWindow" type="RichTextLabel" parent="DialogPanel"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 570.0
margin/bottom = 70.0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="AnswersContainer" type="VBoxContainer" parent="DialogPanel"]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 90.0
margin/right = 570.0
margin/bottom = 180.0
custom_constants/separation = 15
alignment = 0

[node name="Hand" type="HBoxContainer" parent="."]

visibility/light_mask = 0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 260.0
custom_constants/separation = 250
alignment = 0

[connection signal="pressed" from="InteractionButton" to="." method="_on_InteractionButton_pressed"]


